--- a/asset/index.html
+++ b/asset/index.html
@@ -9,7 +9,12 @@
 
     <title>Project1</title>
 </head>
-
+<script>
+    const express = require('express');
+    const cors = require('cors');
+    const app = express();
+    app.use(cors);
+</script>
 <body>
     <div class="container">
         <header>
